<resources>
    <string name="app_name">RetrofitDemo</string>
    <string name="app_name_text">RetrofitDemo</string>


    <string name="sys_warn_plase_wait">正在加载，请稍后...</string>
    <string name="view_prompt_pictxt_text">无记录</string>
    <string name="view_prompt_clickretry_text">网络异常</string>
    <string name="view_prompt_clickretry_btn_text" >点击重试</string>

    <string name="sys_confirm_text">确定</string>
    <string name="home_tab_main">主页</string>
    <string name="home_tab_message">消息</string>
    <string name="home_tab_trade">交易记录</string>
    <string name="home_tab_personal">个人中心</string>
    <string name="footer_more_loading">正在加载,请稍后。。。</string>
    <string name="footer_more_nomore">没有加载内容了</string>
    <string name="message_details">特惠详情</string>
    <string name="personal_wait_pay">待付款</string>
    <string name="personal_wait_send">代发货</string>
    <string name="personal_wait_recieve">待收货</string>
    <string name="personal_wait_evaluate">待评价</string>
    <string name="personal_all">全部</string>
    <string name="personal_shopping_bus">我的购物车</string>
    <string name="personal_collect">我的收藏</string>
    <string name="personal_shopping_address">我的地址</string>
    <string name="personal_login_taobao">登录淘宝</string>
    <string name="personal_suggest">加入内购群</string>
    <string name="personal_praise">为我点赞</string>
    <string name="personal_soft_setting">软件设置</string>
    <string name="main_fragment">首页</string>
    <string name="message_fragment">消息</string>
    <string name="trade_fragment">交易</string>
    <string name="personal_fragment">个人中心</string>
    <string name="main_inndiana">惠夺宝</string>
    <string name="main_crazy">9.9疯抢</string>
    <string name="main_taobao_sale">淘宝特卖</string>
    <string name="main_scare_buy">淘抢购</string>
    <string name="main_coupon">淘优惠券</string>
    <string name="viewpager_height">611</string>
    <string name="viewpager_width">611</string>
    <string name="no_message">暂无消息</string>
    <string name="tv_loading">引导页</string>
    <string name="test_show">测试文字</string>
    <string name="item_delete">删除</string>
    <string name="hos_item_text_line">2</string>
    <string name="grid_column">4</string>
    <string name="app_title_search">搜索宝贝领取优惠券</string>
    <string name="history_search_tv">历史搜索</string>
    <string name="pop_sale">超值爆款</string>
    <string name="sale_detail">月销1万件</string>
    <string name="nine_sale">超值9块9</string>
    <string name="cheap_sale">白菜价</string>
    <string name="coupon_free">劵后9块9包邮</string>
    <string name="good_goods">6元以下好货</string>
    <string name="crazy_type">分类</string>
    <string name="crazy_open">快开</string>
    <string name="crazy_charge">充值</string>
    <string name="crazy_mission">任务</string>
    <string name="crazy_question">问题</string>
    <string name="crazy_spread">推广</string>
    <string name="today_new">今日上新</string>
    <string name="hot_pop">热门爆款</string>
    <string name="mast_cheap">优惠最多</string>
    <string name="coupon_cheap">劵后最低</string>
    <string name="crazy_buy">最后疯抢</string>
    <string name="choose_share">选择要分享的平台</string>
    <string name="share_url">http://www.argorse.com</string>
    <string name="share_title">分享测试标题</string>
    <string name="share_content">分享测试内容</string>
    <string name="share_success">分享成功</string>
    <string name="errcode_deny">分享失败</string>
    <string name="sina_share_hint">新浪分享不支持分享</string>
    <string name="micro_blog">记录日志</string>
    <string name="share_cancel">取消分享</string>
    <string name="errcode_success">微信分享成功</string>
    <string name="errcode_cancel">微信分享取消</string>
    <string name="errcode_unknown">微信分享失败</string>
    <string name="network_unavailable">网络不可用</string>
    <string name="tv_updapte_num">今日已更新234款</string>
    <string name="tv_to_login">请登录</string>
    <string name="login">登录</string>
    <string name="socaial_login">社交号登录</string>
    <string name="phone_register">手机注册</string>
    <string name="reback_pass">找回密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pass">请输入登录密码</string>
    <string name="getSale">领取优惠券</string>
    <string name="goodsBuy">商品页下单</string>
    <string name="userSale">使用优惠券</string>
    <string name="salemoney">￥158.00</string>
    <string name="on_sale_price">在售价 ￥198</string>
    <string name="details">茶汤清爽怡人，茶香清新，是地道台湾乌龙茶，可以预防蛀牙，美容养颜，改善皮肤过敏</string>
    <string name="explain">单笔满3.00元可用，有效期至2017.02.28</string>
    <string name="sale_price">￥1.00</string>
    <string name="cheap_price">省25%</string>
    <string name="left_day">剩余42天 13:21:26</string>
    <string name="have_get_coupon">已领498889张</string>
    <string name="goods_show">润虎 台湾高山茶冻顶乌龙茶台湾茶叶 乌龙茶150克</string>
    <string name="editor_comment">小编酷评</string>
    <string name="cheap_explain">优惠说明</string>
    <string name="goods_recommond">推荐商品</string>
    <string name="get_one_yuan">领1元</string>
    <string name="buy_now">立即购买</string>
    <string name="card_details">帖子详情</string>
    <string name="card_details_name">路边的野花不要采</string>
    <string name="card_details_date">2017-09-19 12:22:13</string>
    <string name="card_details_explain">全部大件衣服，精美礼盒装，送礼更有面子，舒适纯棉，高端大气，无化残留物质，送出品，送出格调。</string>
    <string name="card_details_comment">评论一下吧</string>
</resources>
