<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_panding"
    android:background="@color/all_page_bg"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/ll_header_vp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewpager_height">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_header_main_guidePages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/font_whiter"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <LinearLayout

            android:id="@+id/ll_header_main_point_viewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_panding"
            android:gravity="center_horizontal"
            android:orientation="horizontal" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/font_whiter"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_main_header_inndiana"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_inndiana"
            android:drawableTop="@mipmap/home_header_1"
            android:padding="@dimen/margin_panding_short"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_main_header_crazy_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_crazy"
            android:drawableTop="@mipmap/home_header_2"
            android:padding="@dimen/margin_panding_short"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_taobao_sale"
            android:drawableTop="@mipmap/home_header_3"
            android:padding="@dimen/margin_panding_short"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_scare_buy"
            android:drawableTop="@mipmap/home_header_4"
            android:padding="@dimen/margin_panding_short"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_coupon"
            android:drawableTop="@mipmap/home_header_5"
            android:padding="@dimen/margin_panding_short"
            android:gravity="center"
            />
    </LinearLayout>

    <View style="@style/all_page_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/margin_panding"
        android:background="@color/font_whiter"
        android:orientation="horizontal"
         >

        <LinearLayout
            android:id="@+id/main_pop_sale"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_panding_short"
                android:text="@string/pop_sale"
                android:textColor="@color/font_red"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_panding_short"
                android:text="@string/sale_detail"
                android:textColor="@color/font_gray"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/home_header_6" />
        </LinearLayout>

        <View
            style="@style/all_page_line_v"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/main_sale_nine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_panding_short"
                        android:text="@string/nine_sale"
                        android:textColor="@color/font_red"

                        android:id="@+id/textView2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_panding_short"
                        android:text="@string/coupon_free"
                        android:textColor="@color/font_gray" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_header_7"
                        android:padding="@dimen/margin_panding_short"
                        />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/all_page_line" />

            <LinearLayout
                android:id="@+id/main_cheap_sale"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_panding_short"
                        android:text="@string/cheap_sale"
                        android:textColor="@color/font_red"

                        />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_panding_short"
                        android:text="@string/good_goods"

                        android:textColor="@color/font_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_header_8"
                        android:padding="@dimen/margin_panding_short"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <View
        style="@style/all_page_line"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_panding_short"

        android:text="@string/tv_updapte_num"
        android:textColor="@color/font_red"
        android:gravity="center"
        />
</LinearLayout>